local-services/postgres/test/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres-test
subsets:
- addresses:
  - ip: 192.168.1.32
  ports:
  - port: 15432
    protocol: TCP
