local-services/postgres/test/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
